# gofilepy

./: README.md  pyproject.toml  test.py  test_download.py  test_upload.py
.github/workflows/: build_release.yml
src/gofilepy/: __init__.py  cli.py  client.py  utils.py
